[package]
authors = ["frjnn <f.iannelli.francesco229@gmail.com>"]
categories = ["algorithms", "science", "visualization"]
description = "Exact and Barnes-Hut implementations of t-SNE."
edition = "2021"
exclude = ["/imgs"]
keywords = ["tsne", "data-visualization", "data-analysis", "Barnes-Hut", "machine-learning"]
license = "MIT"
name = "bhtsne"
readme = "README.md"
repository = "https://github.com/frjnn/bhtsne"
version = "0.5.2"

[features]
default = ["csv"]

[dependencies]
csv = {version = "1.1.6", optional = true}
num-traits = "0.2.15"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.5.3"

[dev-dependencies]
csv = "1.1.6"
