[package]
    authors=["frjnn <f.iannelli.francesco229@gmail.com>"]
    categories=["algorithms", "science", "visualization"]
    description="Exact and Barnes-Hut implementations of t-SNE."
    edition="2021"
    exclude=["/imgs"]
    keywords=[
        "Barnes-Hut",
        "data-analysis",
        "data-visualization",
        "machine-learning",
        "tsne",
    ]
    license="MIT"
    name="bhtsne"
    readme="README.md"
    repository="https://github.com/frjnn/bhtsne"
    version="0.5.3"

[features]
    default=["csv"]

[dependencies]
    csv       ={version="1.3", optional=true}
    num-traits="0.2"
    rand      ="0.8"
    rand_distr="0.4"
    rayon     ="1.10"

[dev-dependencies]
    csv="1.3"
