[package]
    authors=["frjnn <f.iannelli.francesco229@gmail.com>"]
    categories=["algorithms", "science", "visualization"]
    description="Exact and Barnes-Hut implementations of t-SNE."
    edition="2024"
    exclude=["/imgs"]
    keywords=[
        "Barnes-Hut",
        "data-analysis",
        "data-visualization",
        "machine-learning",
        "tsne",
    ]
    license="MIT"
    name="bhtsne"
    readme="README.md"
    repository="https://github.com/frjnn/bhtsne"
    version="0.5.4"

[features]
    default=["csv"]

[dependencies]
    crossbeam ="0.8"
    csv       ={version="1", optional=true}
    num-traits="0.2"
    rand      ="0.9"
    rand_distr="0.5"
    rayon     ="1"

[dev-dependencies]
    csv="1.3"
